# PSAC_EVALUATION

./: .gitignore  .gitmodules  README.md
SCI/: CMakeLists.txt  README.md
SCI/PSACEvaluation/: CMakeLists.txt  PSAC_GC_chi2.cpp  PSAC_GC_min.cpp  PSAC_GC_quantile_hideK.cpp  PSAC_GC_sort_rmind.cpp  PSAC_OT_U.cpp  PSAC_OT_chi2.cpp  PSAC_OT_min.cpp  PSAC_OT_min_rmind.cpp  PSAC_OT_outlier.cpp  PSAC_OT_quantile.cpp  PSAC_OT_quantile_hideK.cpp  PSAC_OT_quantile_rmind.cpp  PSAC_OT_softmax.cpp  README.md
SCI/cmake/: seal_gcc11.patch
SCI/src/: CMakeLists.txt  globals.cpp  globals.h  library_fixed_uniform.cpp
SCI/src/BuildingBlocks/: aux-protocols.cpp
SCI/src/GC/: semihonest.h
SCI/src/LinearHE/: CMakeLists.txt
SCI/src/MyFunctions/: CMakeLists.txt  my-functions-class.cpp  my-functions.cpp  my-functions.h
SCI/src/OT/: split-kkot.h
SCI/tests/: CMakeLists.txt  test_field_elemwise_prod2.cpp  test_ring_hadamard_product.cpp
SEAL_codes/: CMakeLists.txt  Lu-ndss-HE.cpp  Lu-ndss-HE.h  README.md  U-test-HE.cpp  examples.h
lattigo_codes/PSAC-DBFV_test/: main.go
lattigo_codes/U-test-HE/: main.go
